openshift/deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mule-ee
  name: mule-ee
spec:
  ports:
  - port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app: mule-ee
