openshift/deploy/route.yml
---
apiVersion: v1
kind: Route
metadata:
  labels:
    app: mule-ee
  name: mule
spec:
  host: ""
  port:
    targetPort: 8081
  to:
    kind: Service
    name: mule-ee
